src/FinancialForce ERP Core/objects/ScheduledJobLog__c.object
<CustomObject>
    <fields>
        <fullName>BatchRun__c</fullName>
        <label>Batch ID</label>
        <referenceTo>ScheduledJobRun__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LogMessage__c</fullName>
        <label>Log Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scheduled Job Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LogMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Job Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>